agregado de difuminado de fondo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="nosotros-container">
             <div class="nosotros-box">
                 <div class="imagen">
-                    <img src="media/fernandez-nosotros.webp" alt="">
+                    <img src="images/fernandez-nosotros.webp" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -60,7 +60,7 @@
             </div>
             <div class="nosotros-box">
                 <div class="imagen">
-                    <img src="media/fernandez-nosotros.webp" alt="">
+                    <img src="images/fernandez-nosotros.webp" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -90,7 +90,7 @@
         <div class="contenedor-servicios">
             <div class="servicio" id="servicio-izq">
                 <div class="imagen">
-                    <img src="media/laboral.jpg" alt="">
+                    <img src="images/laboral.jpg" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -104,7 +104,7 @@
             </div>
             <div class="servicio">
                 <div class="imagen">
-                    <img src="media/civil.jpg" alt="">
+                    <img src="images/civil.jpg" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -118,7 +118,7 @@
             </div>
             <div class="servicio">
                 <div class="imagen">
-                    <img src="media/personalizado.jpg" alt="">
+                    <img src="images/personalizado.jpg" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
