--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <header>
-        <h2 class="logo">R&M</h2>
+        <div class="logo">
+            <img src="media/logo.png" alt="">
+        </div>
         <input type="checkbox" id="check">
         <label for="check" class="mostrar-menu">
             &#8801
         </label>
-        <nav class="menu">
+            <nav class="menu">
             <a href="#banner">Inicio</a>
             <a href="#nosotros">Sobre nosotros</a>
             <a href="#servicios">Servicios</a>
@@ -27,9 +29,19 @@
     </header>
     <seccion id="banner">
         <div class="contenido-banner">
-            <h1>Ramallo<br>& Muiño</h1>
+            <div class="tittle-banner">
+                <h1>
+                    Fernando Ramallo 
+                    <br>
+                    & Mariela Muiño
+                </h1>
+                <p>
+                    Especialistas en Derecho Laboral y Civil
+                </p>
+            </div>
         </div>
     </seccion>
+
     <seccion id="nosotros">
         <div class="contenedor-tittle">
             <h2 class="tittle"> 
@@ -40,7 +52,7 @@
         <div class="nosotros-container">
             <div class="nosotros-box">
                 <div class="imagen">
-                    <img src="images/fernandez-nosotros.webp" alt="">
+                    <img src="media/fernandez-nosotros.webp" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -60,7 +72,7 @@
             </div>
             <div class="nosotros-box">
                 <div class="imagen">
-                    <img src="images/fernandez-nosotros.webp" alt="">
+                    <img src="media/fernandez-nosotros.webp" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -90,7 +102,7 @@
         <div class="contenedor-servicios">
             <div class="servicio" id="servicio-izq">
                 <div class="imagen">
-                    <img src="images/laboral.jpg" alt="">
+                    <img src="media/laboral.jpg" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -104,7 +116,7 @@
             </div>
             <div class="servicio">
                 <div class="imagen">
-                    <img src="images/civil.jpg" alt="">
+                    <img src="media/civil.jpg" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
@@ -118,7 +130,7 @@
             </div>
             <div class="servicio">
                 <div class="imagen">
-                    <img src="images/personalizado.jpg" alt="">
+                    <img src="media/personalizado.jpg" alt="">
                 </div>
                 <h4>Lorem, ipsum dolor.</h4>
                 <div id="txt">
