--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <div class="contenido-banner">
             <div class="tittle-banner">
                 <h1>
-                    Fernando Ramallo 
-                    <br>
-                    & Mariela Muiño
+                    Fernando Ramallo & Mariela Muiño
                 </h1>
                 <p>
                     Especialistas en Derecho Laboral y Civil
