ajuste font size

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <div class="contenido-banner">
             <div class="tittle-banner">
                 <h1>
-                    Fernando Ramallo & Mariela Muiño
+                    Fernando Ramallo
+                    <br>
+                    Mariela Muiño
                 </h1>
                 <p>
                     Especialistas en Derecho Laboral y Civil
