--- a/index.html
+++ b/index.html
@@ -192,8 +192,10 @@
                     <label for="mensaje">Mensaje</label>
                     <textarea id="mensaje" name="mensaje" required></textarea>
 
-                    <div class="button">
-                        <input type="submit" value="Enviar" id="button">
+                    <div class="button-container">
+                        <div class="button">
+                            <input type="submit" value="Enviar" id="button">
+                        </div>
                     </div>
             </form>
         </div>
