--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     Especialistas en Derecho Laboral y Civil
                 </p>
             </div>
+            <div class="ws-button">
+                <a href="https://api.whatsapp.com/send/?phone=5493512100394">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+            </div>
         </div>
     </seccion>
 
@@ -156,19 +161,27 @@
             <h4> Seguinos en nuestras redes sociales</h4>
             <div class="redes-container">
                 <div class="red">
-                    <i class="fa-brands fa-whatsapp"></i>
+                    <a href="https://api.whatsapp.com/send/?phone=5493512100394" target="_blank">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
                 </div>
                 <div class="red">
-                    <i class="fa-brands fa-instagram"></i>
+                    <a href="https://www.instagram.com/ramallo_asociados_abogados?igsh=Z2g2b3pwbzJpcXQ4" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
                 </div>
                 <div class="red">
-                    <i class="fa-brands fa-facebook-f"></i>
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
                 </div>
                 <div class="red">
-                    <i class="fa-brands fa-linkedin-in"></i>
+                    <a href="https://ar.linkedin.com/in/estudio-jur%C3%ADdico-ramallo-y-asociados-68b24b103" target="_blank">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
                 </div>
                 <div class="red">
-                    <a href="#banner">
+                    <a href="https://ar.linkedin.com/in/mariana-mui%C3%B1o-84860421a" target="_blank">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </a>
                 </div>
