--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <p class="txt">Por favor, introduce tus datos, nos podremos en contacto lo antes
                 posible
             </p>
-            <form action="#" method="post">
+            <form action="https://formsubmit.co/maria99merlo@gmail.com" method="POST">
                     <label for="nombre">Nombre</label>
                     <input type="text" id="nombre" name="nombre" required>
      
