--- a/index.html
+++ b/index.html
@@ -205,11 +205,12 @@
                     <label for="mensaje">Mensaje</label>
                     <textarea id="mensaje" name="mensaje" required></textarea>
 
-                    <div class="button-container">
+                    <!-- <div class="button-container">
                         <div class="button">
                             <input type="submit" value="Enviar" id="button">
                         </div>
-                    </div>
+                    </div> -->
+                    <input type="submit" value="Enviar" id="button">
             </form>
         </div>
 
