--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <p class="txt">Por favor, introduce tus datos, nos podremos en contacto lo antes
                 posible
             </p>
-            <form action="https://formsubmit.co/pia.merlo@mi.unc.edu.ar" method="POST">
+            <form action="https://formsubmit.co/maria99merlo@gmail.com" method="POST">
                     <label for="nombre">Nombre</label>
                     <input type="text" id="nombre" name="nombre" required>
      
@@ -205,12 +205,11 @@
                     <label for="mensaje">Mensaje</label>
                     <textarea id="mensaje" name="mensaje" required></textarea>
 
-                    <!-- <div class="button-container">
+                    <div class="button-container">
                         <div class="button">
                             <input type="submit" value="Enviar" id="button">
                         </div>
-                    </div> -->
-                    <input type="submit" value="Enviar" id="button">
+                    </div> 
             </form>
         </div>
 
