probando funcionalidades Js

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     Mariela Muiño
                 </h1>
                 <p>
-                    Especialistas en Derecho Laboral y Civil
+                    Esp. en Derecho Laboral y Civil
                 </p>
             </div>
             <div class="ws-button">
@@ -192,7 +192,7 @@
             <p class="txt">Por favor, introduce tus datos, nos podremos en contacto lo antes
                 posible
             </p>
-            <form action="https://formsubmit.co/maria99merlo@gmail.com" method="POST">
+            <form id="contactForm" action="https://formsubmit.co/maria99merlo@gmail.com" method="POST">
                     <label for="nombre">Nombre</label>
                     <input type="text" id="nombre" name="nombre" required>
      
