ajustes finales: refresco y captcha

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <p class="txt">Por favor, introduce tus datos, nos podremos en contacto lo antes
                 posible
             </p>
-            <form id="contactForm" action="https://formsubmit.co/maria99merlo@gmail.com" method="POST">
+            <form action="https://formsubmit.co/maria99merlo@gmail.com" method="POST">
                     <label for="nombre">Nombre</label>
                     <input type="text" id="nombre" name="nombre" required>
      
@@ -210,6 +210,9 @@
                             <input type="submit" value="Enviar" id="button">
                         </div>
                     </div> 
+                <input type="hidden" name="_next" value="https://mariap99.github.io/Estudio_Juridico_R-M/#contacto">
+
+                <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
 
