--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <input type="submit" value="Enviar" id="button">
                         </div>
                     </div> 
-                <input type="hidden" name="_next" value="https://mariap99.github.io/Estudio_Juridico_R-M/#contacto">
+                <input type="hidden" name="_next" value="https://mariap99.github.io/Estudio_Juridico_R-M/">
 
                 <input type="hidden" name="_captcha" value="false">
             </form>
