--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <div class="red">
-                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
+                    <a href="https://www.facebook.com/profile.php?id=61559869002211&mibextid=ZbWKwL" target="_blank">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a>
                 </div>
