--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="imagen">
                     <img src="media/fernandez-nosotros.webp" alt="">
                 </div>
-                <h4>Lorem, ipsum dolor.</h4>
+                <h4>Ramallo, Fernando</h4>
                 <div id="txt">
                     <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.                         
@@ -79,7 +79,7 @@
                 <div class="imagen">
                     <img src="media/fernandez-nosotros.webp" alt="">
                 </div>
-                <h4>Lorem, ipsum dolor.</h4>
+                <h4>Muiño, Mariela</h4>
                 <div id="txt">
                     <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.                         
@@ -109,7 +109,7 @@
                 <div class="imagen">
                     <img src="media/laboral.jpg" alt="">
                 </div>
-                <h4>Lorem, ipsum dolor.</h4>
+                <h4> Derecho laboral </h4>
                 <div id="txt">
                     <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -123,7 +123,7 @@
                 <div class="imagen">
                     <img src="media/civil.jpg" alt="">
                 </div>
-                <h4>Lorem, ipsum dolor.</h4>
+                <h4> Derecho civil </h4>
                 <div id="txt">
                     <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -137,7 +137,7 @@
                 <div class="imagen">
                     <img src="media/personalizado.jpg" alt="">
                 </div>
-                <h4>Lorem, ipsum dolor.</h4>
+                <h4> Atención personalizada </h4>
                 <div id="txt">
                     <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -187,7 +187,7 @@
                 </div>
             </div>
         </div>
-        <div class="formulario">
+<!--      <div class="formulario">
             <h4>Solicita nuestros servicios</h4>
             <p class="txt">Por favor, introduce tus datos, nos podremos en contacto lo antes
                 posible
@@ -215,7 +215,7 @@
                 <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
-
+-->  
         <div class="contenedor-ubicacion">
             <div class="mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.224779965828!2d-64.18839762404852!3d-31.435478197175165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2f2e7d183eb%3A0x78b8948cedfeb081!2sUniversidad%20Nacional%20de%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1714075618171!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -229,7 +229,7 @@
                 <i class="fa-solid fa-phone">
                     <span>Teléfono:</span>
                 </i>
-                <p class="txt">123 456 789</p>
+                <p class="txt">03512100394</p>
                 <i class="fa-regular fa-envelope">
                     <span> Email:</span>
                 </i>
